--- a/wiremock/pom.xml
+++ b/wiremock/pom.xml
@@ -52,5 +52,10 @@
     <artifactId>jackson-dataformat-xml</artifactId>
     <version>2.8.5</version>
 </dependency>
+      <dependency>
+          <groupId>org.hsqldb</groupId>
+          <artifactId>hsqldb</artifactId>
+          <version>2.3.4</version>
+      </dependency>
 </dependencies>
 </project>
