--- a/wiremock/pom.xml
+++ b/wiremock/pom.xml
@@ -109,5 +109,10 @@
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.5</version>
+        </dependency>
     </dependencies>
 </project>
